--- a/bio.html
+++ b/bio.html
@@ -5,4 +5,12 @@
 <meta charset="utf-8" />
 
 </head>
+
+<body>
+<hgroup>
+	<h1>About Katie McMahon</h1>
+	<h2>My Education and Skills</h2>
+</hgroup>
+
+
 </html>
