bio with picture

--- a/bio.html
+++ b/bio.html
@@ -23,6 +23,7 @@
 	<h1>About Katie McMahon</h1>
 	<h2>My Education and Skills</h2>
 </hgroup>
+<img src="st-josephs-university.jpg">
 <div id="MainContent">
 <section id="BasicInformation" class="TopLevel">
 	<h3>Basic Information</h3>
